--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "execa": "^6.1.0",
     "inquirer": "^8.2.5",
     "microbundle": "^0.15.1",
-    "mustache": "^4.2.0",
     "ora": "^6.1.2",
     "simple-git": "^3.15.1",
+    "template-directory": "^2.0.0",
+    "template-file": "^6.0.1",
     "typescript": "^4.9.3"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "@types/inquirer": "^9.0.3",
     "@types/node": "^18.11.11"
   }
