--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./bin",
-    "target": "es2020",
+    "target": "ESNext",
     "module": "CommonJS",
     "strict": true,
     "sourceMap": true,
