--- a/templates/ci/.github/workflows/ci.yml
+++ b/templates/ci/.github/workflows/ci.yml
@@ -4,6 +4,11 @@ on:
     branches:
       - master
 
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
+
 jobs:
   semantic-release:
     runs-on: ubuntu-latest
