--- a/templates/ci/.releaserc.json
+++ b/templates/ci/.releaserc.json
@@ -5,7 +5,7 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     [
-      "@semantic-release/changelog",
+      "@semantic-release/npm",
       {
         "npmPublish": false,
         "pkgRoot": "Assets/Package"
